@@ -7356,6 +7356,8 @@ rb_w32_pow(double x, double y)
 }
 #endif
 
+VALUE (*const rb_f_notimplement_)(int, const VALUE *, VALUE) = rb_f_notimplement;
+
 #if RUBY_MSVCRT_VERSION < 120
 #include "missing/nextafter.c"
 #endif
